<resources>
    <string name="app_name">MakingBetterDecisions</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="info">Info</string>
    <string name="account">Account</string>
    <string name="login">Login</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login1">Login</string>
    <string name="sign_up1">Sign Up</string>
    <string name="password1">Password</string>
    <string name="email">Email</string>
    <string name="use_case_title">Use Case Title</string>
    <string name="use_case_description_goes_here">Use case description goes here</string>
    <string name="tvemail">Email:</string>
    <string name="displayemail">email</string>
    <string name="change_password">Change Password</string>
    <string name="profile">Profile</string>
    <string name="use_case_1">Use Case 1</string>
    <string name="use_case_2">Use Case 2</string>
    <string name="use_case_3">Use Case 3</string>
    <string name="back">Back</string>
</resources>

