<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_background_gradient"
    tools:context=".SignupFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="32dp">

        <!-- EMAIL -->
        <EditText
            android:id="@+id/signupEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:padding="14dp"
            android:inputType="textEmailAddress"
            android:textColor="#FFFFFF"
            android:textColorHint="#BBD7FF"
            android:background="@drawable/rounded_input"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- PASSWORD -->
        <EditText
            android:id="@+id/signupPass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password1"
            android:padding="14dp"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            android:textColorHint="#BBD7FF"
            android:layout_marginTop="18dp"
            android:background="@drawable/rounded_input"
            app:layout_constraintTop_toBottomOf="@id/signupEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- BACK BUTTON -->
        <Button
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Back"
            android:textColor="#0A1A2F"
            android:background="@drawable/rounded_button_white"
            android:backgroundTint="#FFFFFF"
            android:foregroundTint="#FFFFFF"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/signupPass"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/signupButton2"
            app:layout_constraintHorizontal_weight="1" />

        <!-- SIGN UP BUTTON -->
        <Button
            android:id="@+id/signupButton2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up1"
            android:textColor="#0A1A2F"
            android:background="@drawable/rounded_button_white"
            android:backgroundTint="#FFFFFF"
            android:foregroundTint="#FFFFFF"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/signupPass"
            app:layout_constraintStart_toEndOf="@id/back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
